fix: navbar z-index

--- a/public/styles/nav-bar.css
+++ b/public/styles/nav-bar.css
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   top: 0;
+  z-index: 1;
 }
 
 .navBar > .searchBox {
